Work on data cleaning
- Unified data types for start and end time in the line productivity table.
- Exported data in a new file: clean_data_final.xlsx.

--- a/phase-1/data_cleaning.ipynb
+++ b/phase-1/data_cleaning.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import datetime"
    ]
   },
   {
@@ -167,6 +168,175 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbb1865f-515c-4ae9-8cc7-8d11000a8d7c",
+   "metadata": {},
+   "source": [
+    "**Fix time values in ```Start_Time``` and ```End_Time``` columns**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ad22d657-293a-4948-9ed3-1fdea483a6fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.True_"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that all Start Time values are of the type datetime.time\n",
+    "line_prod[\"Start_Time\"].apply(lambda x: isinstance(x, datetime.time)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "62019b28-7a2e-43f6-9069-303e5e9d9bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.False_"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that all End Time values are of the type datetime.time\n",
+    "line_prod[\"End_Time\"].apply(lambda x: isinstance(x, datetime.time)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a9b3919b-ab07-4fae-a228-f9140faeccb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Batch</th>\n",
+       "      <th>Operator</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Start_Time</th>\n",
+       "      <th>End_Time</th>\n",
+       "      <th>Product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>422148</td>\n",
+       "      <td>Mac</td>\n",
+       "      <td>2024-09-03</td>\n",
+       "      <td>22:55:00</td>\n",
+       "      <td>1900-01-01 01:05:00</td>\n",
+       "      <td>CO-2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Batch Operator       Date Start_Time             End_Time  Product\n",
+       "37  422148      Mac 2024-09-03   22:55:00  1900-01-01 01:05:00  CO-2000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find values in End Time that are not of the type datetime.time\n",
+    "line_prod[line_prod[\"End_Time\"].apply(lambda x: not(isinstance(x, datetime.time)))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a75243b9-bc17-4c23-a23b-d636592481bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for the End Time value type at index 37\n",
+    "type(line_prod.loc[37, \"End_Time\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8b871ea5-3e47-46eb-8bd6-2bc6da2f908d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Batch                      422148\n",
+       "Operator                      Mac\n",
+       "Date          2024-09-03 00:00:00\n",
+       "Start_Time               22:55:00\n",
+       "End_Time                 01:05:00\n",
+       "Product                   CO-2000\n",
+       "Name: 37, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract the time component and rewrite the value\n",
+    "line_prod.loc[37, \"End_Time\"] = line_prod.loc[37, \"End_Time\"].time()\n",
+    "\n",
+    "# Check\n",
+    "line_prod.iloc[37, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "016ed532-68c4-4c0f-a885-cb6eb649d4d5",
    "metadata": {},
    "source": [
@@ -175,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "5514b06c-96ec-4d6d-8d36-3a3c21a4baca",
    "metadata": {},
    "outputs": [
@@ -202,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "1e9ffe61-011d-4810-a1c3-9c18532df380",
    "metadata": {},
    "outputs": [
@@ -212,7 +382,7 @@
        "6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "a26bb01a-d947-4e08-bf67-7aed8685e0dc",
    "metadata": {},
    "outputs": [
@@ -238,7 +408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "b800a94f-3412-4b6b-a728-a409387e695d",
    "metadata": {},
    "outputs": [
@@ -260,7 +430,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "34ee3fcc-9fc7-4b49-8c9e-183187b48682",
    "metadata": {},
    "outputs": [
@@ -306,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "9b41722b-e8b0-4822-a5e4-9fa9ccbf530f",
    "metadata": {},
    "outputs": [
@@ -316,7 +486,7 @@
        "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "48c74c6f-8fc0-4673-8bb7-8f757f42a0f0",
    "metadata": {},
    "outputs": [
@@ -341,7 +511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "612cf313-6e66-467a-9225-16209433ee84",
    "metadata": {},
    "outputs": [
@@ -363,7 +533,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "8b8ca90e-c04b-4639-b9d2-5ed838d9d887",
    "metadata": {},
    "outputs": [
@@ -410,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "6aef55fe-6d3b-4922-8f77-0d90adfcd93d",
    "metadata": {},
    "outputs": [
@@ -420,7 +590,7 @@
        "12"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "8f530e6d-2a3c-413b-b143-4bf1a60d9a67",
    "metadata": {},
    "outputs": [
@@ -446,7 +616,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "d1a13e4f-fdb3-4c1b-82fa-b367ea02cdf2",
    "metadata": {},
    "outputs": [
@@ -468,7 +638,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "5ab480b8-a466-499d-85b8-01c171d8e771",
    "metadata": {},
    "outputs": [
@@ -515,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "20d3f552-9a27-40c2-8436-edbcc83fb0d5",
    "metadata": {},
    "outputs": [
@@ -527,7 +697,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "c7675a42-fc6f-4dfe-abc8-b2cf208e3e6b",
    "metadata": {},
    "outputs": [
@@ -548,7 +718,7 @@
        "61"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "69dc424c-f9c3-40d9-9dc4-2be6d01a9530",
    "metadata": {},
    "outputs": [
@@ -574,7 +744,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "51c2734a-2da1-45c7-b9ac-3a41523ec489",
    "metadata": {},
    "outputs": [
@@ -596,7 +766,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "1eb085e4-2851-45e4-b592-427cc307c0c2",
    "metadata": {},
    "outputs": [
@@ -647,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "39260b16-6e35-4903-9d95-139eec93bab7",
    "metadata": {},
    "outputs": [
@@ -657,7 +827,7 @@
        "6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "145599e9-e438-4154-b97f-3e6b6a791f93",
    "metadata": {},
    "outputs": [
@@ -687,7 +857,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "a137d7c6-5a2f-49c9-841d-f879fa007771",
    "metadata": {},
    "outputs": [
@@ -709,7 +879,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,6 +887,35 @@
    "source": [
     "# Find the number of duplicate records\n",
     "Calender.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afb687f-c73c-41f0-8c62-65fa434d4ae1",
+   "metadata": {},
+   "source": [
+    "## Export Final Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "37f9b248-7247-4ce0-8783-9fe459d069de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"Line_productivity\": line_prod,\n",
+    "    \"Calender\": Calender,\n",
+    "    \"Products\": products,\n",
+    "    \"Product_details\": products_details,\n",
+    "    \"Downtime_factors\": Downtime_fact,\n",
+    "    \"Line_downtime\": Line_downtime\n",
+    "}\n",
+    "\n",
+    "with pd.ExcelWriter(\"./clean_data_final.xlsx\") as writer:\n",
+    "    for sheet_name, df in data.items():\n",
+    "        df.to_excel(writer, sheet_name=sheet_name, index=False)"
    ]
   }
  ],
